FIX: Small results spacing adjustment

--- a/common/common.scss
+++ b/common/common.scss
@@ -130,7 +130,7 @@ $max-width: 600px;
     margin-left: auto;
     margin-right: auto;
     left: 0;
-    top: 2.75em;
+    top: 100%;
     right: 0;
     padding: 0.5em;
     @include breakpoint(mobile-extra-large) {
